--- a/src/screens/style.css
+++ b/src/screens/style.css
@@ -222,24 +222,17 @@
   
   .desktop .text-in-planning {
     -webkit-background-clip: text !important;
-    -webkit-text-fill-color: transparent;
     align-self: stretch;
-    background: linear-gradient(
-      180deg,
-      rgb(255, 255, 255) 0%,
-      rgb(229.57, 225.33, 225.33) 100%
-    );
-    background-clip: text;
-    color: transparent;
+    color: #ffffff;
     font-family: "DM Sans", Helvetica;
     font-size: 100px;
     font-weight: 600;
     letter-spacing: 0;
     line-height: 105px;
     margin-top: -1.00px;
+    width: 900px;
     position: relative;
-    text-fill-color: transparent;
-    text-shadow: 0px 1px 4px #00000040;
+    text-shadow: 2px 5px rgba(0,0,0,0.2);
   }
   
   .desktop .p {
