--- a/client/src/components/styles.css
+++ b/client/src/components/styles.css
@@ -11,6 +11,7 @@
   justify-content: center;
   padding: 12px 16px;
   position: relative;
+  cursor: pointer;
 }
 
 .type-primary-state-wrapper .label {
