--- a/client/src/screens/settings.css
+++ b/client/src/screens/settings.css
@@ -957,3 +957,26 @@
     width: 314px;
   }
   
+
+  /* logo */
+.rareblocks {
+  color: transparent;
+  font-family: "Plus Jakarta Sans", Helvetica;
+  font-size: 16px;
+  font-weight: 700;
+  left: 0;
+  letter-spacing: 3.00px;
+  line-height: 30px;
+  position: absolute;
+  top: 0;
+  white-space: nowrap;
+}
+
+.span {
+  color: black;
+  letter-spacing: 0.48px;
+}
+
+.blueline{
+  color: blue;
+}
